centjes-gen/test_resources/balance/error/as-is/BE_RUNNING_BALANCE.cent
currency USD 0.01

account assets
account income

2023-11-24
  * assets +184467440737095516.15 USD
  * income -184467440737095516.15 USD

2023-11-24
  * assets +184467440737095516.15 USD
  * income -184467440737095516.15 USD
